fix: content not visible in opera mini browser

--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -4468,16 +4468,6 @@ input[type="color"]::-webkit-color-swatch {
   position: relative;
 }
 
-#content {
-  content: "768";
-}
-
-@media all and (max-width: 768px) {
-  #content {
-    content: "";
-  }
-}
-
 .blog .posted-on {
   z-index: 1;
 }
